actualizacion proyecto final7

--- a/views/edlim_fut.hbs
+++ b/views/edlim_fut.hbs
@@ -69,5 +69,5 @@
 {{> suscribirse}}
 
 
-<script src="/js/inj.js"></script>
+{{!-- <script src="/js/inj.js"></script> --}}
 <!-- *************************************** /E-Limitada Futbol ***************************************************************** -->
