--- a/views/tlibre_bkt.hbs
+++ b/views/tlibre_bkt.hbs
@@ -47,5 +47,5 @@
 
 {{> suscribirse}}
 
-<script src="/js/inj.js"></script>
+{{!-- <script src="/js/inj.js"></script> --}}
 <!-- *************************************** /T-libre Basket ***************************************************************** -->
