--- a/views/shorts_bkt.hbs
+++ b/views/shorts_bkt.hbs
@@ -80,5 +80,5 @@
 
 {{> suscribirse}}
 
-<script src="/js/inj.js"></script>
+{{!-- <script src="/js/inj.js"></script> --}}
 <!-- *************************************** /Short Basket ***************************************************************** -->
