actualizacion proyecto final9

--- a/views/medi_fut.hbs
+++ b/views/medi_fut.hbs
@@ -33,7 +33,7 @@
 
 {{> suscribirse}}
 
-{{!-- <script src="/js/inj.js"></script> --}}
+<script src="/js/inj.js"></script>
 
 
 <!-- *************************************** /Medias ***************************************************************** -->
