--- a/views/socios.hbs
+++ b/views/socios.hbs
@@ -96,7 +96,7 @@
                 </div>
 
                 <div class="mb-3 row">
-                    <label for="provincia" class="col-sm-2 col-form-label">Provincia : </label>
+                    <label for="provincia" class="col-sm-2 col-form-label">Provincia : * </label>
                     <div class="col-sm-10">
                         <input type="text" class="form-control" name="provincia" id="provincia"
                             placeholder="Provincia" />
@@ -104,21 +104,21 @@
                 </div>
 
                 <div class="mb-3 row">
-                    <label for="ciudad" class="col-sm-2 col-form-label">Ciudad : </label>
+                    <label for="ciudad" class="col-sm-2 col-form-label">Ciudad : * </label>
                     <div class="col-sm-10">
                         <input type="text" class="form-control" name="ciudad" id="ciudad" placeholder="Ciudad" />
                     </div>
                 </div>
 
                 <div class="mb-3 row">
-                    <label for="cp" class="col-sm-2 col-form-label">Codigo Postal : </label>
+                    <label for="cp" class="col-sm-2 col-form-label">Codigo Postal : * </label>
                     <div class="col-sm-10">
                         <input type="number" class="form-control" name="cp" id="cp" placeholder="Codigo Postal" />
                     </div>
                 </div>
 
                 <div class="mb-3 row">
-                    <label for="pais" class="col-sm-2 col-form-label">Pais : </label>
+                    <label for="pais" class="col-sm-2 col-form-label">Pais : * </label>
                     <div class="col-sm-10">
                         <input type="text" class="form-control" name="pais" id="pais" placeholder="Pais" />
                     </div>
