--- a/views/registrados.hbs
+++ b/views/registrados.hbs
@@ -11,6 +11,7 @@
     </h3>
 
 </div>
+<div class="table-responsive">
 <table class="table table-dark table-striped mb-5 ">
     <thead>
         <th>Numero De Socio</th>
