proyecto final completo

--- a/views/cam_fut.hbs
+++ b/views/cam_fut.hbs
@@ -1,7 +1,9 @@
-<!-- ************************************* Camisetas ********************************************************** -->
+{{!-- ************************************* BANNER ********************************************************************* --}}
+
 <a href="/cam_fut"><img src="https://bocashop.vteximg.com.br/arquivos/ids/168481/BocaShop2022-LaDeBoca_BannerD.jpg?v=637922779497600000 "
     class="img-fluid" alt="Boca Shop"></a>
 
+<!-- ************************************* Camisetas ********************************************************** -->
 <section id="mas_vendidos">
     
     <div class="container-fluid ">
