--- a/views/ind.hbs
+++ b/views/ind.hbs
@@ -1,3 +1,4 @@
+{{!-- ************************************** validacion  ***********************************************************--}}
 
 <div class="text-center m-0">
         <h2 class="bg-success text-light ">
