--- a/views/somos.hbs
+++ b/views/somos.hbs
@@ -1,5 +1,11 @@
+{{!-- ************************************* BANNER ********************************************************************* --}}
+
+
 <img src="https://bocashop.vteximg.com.br/arquivos/ids/155632/Banner-Nosotros-Xeneizes.png?v=637320578294470000 "
     class="img-fluid" alt="...">
+
+{{!-- ************************************* somos boca ********************************************************************* --}}
+
 
 <div class="container-fluid">
     <div class="row">
@@ -32,6 +38,6 @@
     </div>
 </div>
 
-</div>
+
 
 {{> suscribirse}}
