--- a/views/cfut_2.hbs
+++ b/views/cfut_2.hbs
@@ -1,12 +1,12 @@
 
 
 
-<section >
 {{!-- ************************************** Banner ***********************************************************--}}
 <a href="/cam_fut"><img src="https://bocashop.vteximg.com.br/arquivos/ids/168481/BocaShop2022-LaDeBoca_BannerD.jpg?v=637922779497600000 "
     class="img-fluid" alt="Boca Shop"></a>
 
 {{!-- ************************************** Camiseta futbol 2 ***********************************************************--}}
+<section >
 <div class="card mb-3 m-5" >
   <div class="row g-0">
     <div class="col-md-4 p-5">
@@ -24,11 +24,12 @@
     </div>
   </div>
 </div>
+</section>
 
+{{!-- ************************************** Forma de Pago ***********************************************************--}}
 
 {{> pago}}
 {{> suscribirse}}
-</section>
 
 
 <script src="/js/al.js"></script>
