--- a/views/edlim_fut.hbs
+++ b/views/edlim_fut.hbs
@@ -1,6 +1,11 @@
-<!-- ************************************* E-Limitada Futbol ********************************************************** -->
+
+
+
+{{!-- ************************************* BANNER ********************************************************************* --}}
 <img src="https://bocashop.vteximg.com.br/arquivos/ids/168481/BocaShop2022-LaDeBoca_BannerD.jpg?v=637922779497600000 "
     class="img-fluid" alt="...">
+
+<!-- ************************************* E-Limitada Futbol ********************************************************** -->
 
 <section id="mas_vendidos">
     
