--- a/views/medi_fut.hbs
+++ b/views/medi_fut.hbs
@@ -1,7 +1,9 @@
-<!-- ************************************* Medias ********************************************************** -->
+{{!-- ************************************* BANNER ********************************************************************* --}}
+
 <img src="https://bocashop.vteximg.com.br/arquivos/ids/168481/BocaShop2022-LaDeBoca_BannerD.jpg?v=637922779497600000 "
     class="img-fluid" alt="...">
 
+<!-- ************************************* Medias ********************************************************** -->
 <section id="mas_vendidos">
     
     <div class="container-fluid ">
