--- a/views/shorts_bkt.hbs
+++ b/views/shorts_bkt.hbs
@@ -1,7 +1,10 @@
-<!-- ************************************* Short Basket ********************************************************** -->
+{{!-- ************************************* BANNER ********************************************************************* --}}
+
+
 <img src="https://bocashop.vteximg.com.br/arquivos/ids/168481/BocaShop2022-LaDeBoca_BannerD.jpg?v=637922779497600000 "
     class="img-fluid" alt="...">
 
+<!-- ************************************* Short Basket ********************************************************** -->
 <section id="mas_vendidos">
     
     <div class="container-fluid ">
