--- a/views/socios.hbs
+++ b/views/socios.hbs
@@ -127,7 +127,7 @@
                 <div class="mb-3 row">
                     <label for="email" class="col-sm-2 col-form-label"> Email : * </label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" name="email" id="email" placeholder="Email" />
+                        <input type="email" class="form-control" name="email" id="email" placeholder="Email" />
                     </div>
                 </div>
 
